--- a/main.css
+++ b/main.css
@@ -1,13 +1,14 @@
 /* Start Global Settings */
 
 :root {
-	--first-color: #333A73;
-	--first-alt-color: #092753;
+	--first-color: #092753;
+	--first-alt-color: #0e176b;
 	--sec-color: #FBA834;
 	--third-color: #387ADF;
 	--fourth-color: #50C4ED;
 	--white: #eeeeee;
 	--black: #252525;
+	--bg-color: #FFECD2;
 	--font-main: "Cairo", sans-serif;
 }
 
@@ -30,13 +31,13 @@ body {
 	font-family: var(--font-main);
 	direction: rtl;
 	overflow-x: hidden;
-	background-color: var(--white);
+	background-color: var(--bg-color);
 
 }
 
 body::-webkit-scrollbar,
 .mainbg::-webkit-scrollbar {
-	background-color: var(--sec-color);
+	background-color: var(--bg-color);
 	width: 10px;
 }
 
@@ -57,7 +58,6 @@ ul li {
 
 a {
 	text-decoration: none;
-	color: unset;
 }
 
 .row {
@@ -69,3 +69,231 @@ section {
 }
 
 /* End Global Settings */
+
+
+/* Start Navbar Settings */
+.pre-header {
+	background-color: var(--bg-color);
+	color: var(--black);
+	height: 30px;
+	padding: 0px 40px;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.navBar {
+	background-color: var(--first-color);
+	height: 60px;
+}
+
+.cart-navbar::after {
+	position: absolute;
+	content: "";
+	top: 50%;
+	left: 1.5%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	width: 1px;
+	height: 25px;
+	background-color: #ffffff77;
+}
+
+.cart-title,
+.user-title {
+	color: var(--white);
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.cart-amount {
+	color: var(--sec-color);
+	font-size: 15px;
+	font-weight: 400;
+}
+
+.user-log {
+	font-size: 11px;
+	color: var(--white);
+	font-weight: 400;
+}
+
+@media (max-width:1080px) {
+	.user-log {
+		font-size: 9px;
+	}
+}
+
+@media (max-width:992px) {
+
+	.cart-title,
+	.user-title {
+		font-size: 12px;
+	}
+
+	.cart-amount {
+		font-size: 11px;
+	}
+
+	.user-log {
+		font-size: 7px;
+	}
+
+	.cart-navbar::after {
+		left: -1%;
+	}
+}
+
+@media (max-width:768px) {
+	.cart-navbar::after {
+		display: none;
+	}
+}
+
+.search-btn {
+	background-color: var(--sec-color);
+	outline: none;
+	border: none;
+	width: 45px;
+	height: 45px;
+}
+
+
+.search-input-navbar {
+	height: 45px;
+	padding: 0px 10px;
+	border: none;
+	width: 100%;
+	border-radius: 5px 0px 0px 5px;
+	-webkit-border-radius: 5px 0px 0px 5px;
+	-moz-border-radius: 5px 0px 0px 5px;
+	-ms-border-radius: 5px 0px 0px 5px;
+	-o-border-radius: 5px 0px 0px 5px;
+}
+
+.search-input-navbar:focus,
+.search-input-navbar:active {
+	border: none;
+	outline: none;
+}
+
+.logo-navbar .navbar-brand img {
+	height: 45px;
+	object-fit: cover;
+}
+
+.filter-bar {
+	background-color: var(--white);
+	height: 40px;
+}
+
+.all-categories:focus,
+.all-categories:active {
+	box-shadow: none !important;
+}
+
+.filter-bar-items {
+	justify-content: end;
+}
+
+.filter-bar-items .nav-item a {
+	color: var(--first-color) !important;
+	font-size: 16px;
+	font-weight: 600;
+}
+
+.filter-bar-items .nav-item a:hover {
+	color: var(--sec-color) !important;
+}
+
+.all-categories {
+	color: var(--sec-color);
+	font-size: 20px;
+	font-weight: 600;
+}
+
+.navbar-toggler-icon svg {
+	padding-top: 5px;
+	color: var(--sec-color);
+}
+
+.navbar-toggler-icon svg:focus,
+.navbar-toggler-icon svg:active,
+.navbar-toggler:focus {
+	box-shadow: none !important;
+}
+
+.navbar-collapse.collapse.show {
+	position: absolute;
+	left: 3px;
+	top: 90%;
+	width: 50%;
+	z-index: 5;
+	background-color: var(--white);
+	text-align: right;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+}
+
+.collapsing {
+	-webkit-transition: none;
+	transition: none;
+	display: none;
+}
+
+/* End Navbar Settings */
+
+
+/* Start Hero Section */
+.hero {
+	background-color: var(--bg-color);
+	position: relative;
+}
+
+.carousel-item {
+	position: relative;
+}
+
+.carousel-item img {
+	object-fit: cover;
+	height: calc(100vh - 130px);
+	width: 100vw !important;
+}
+
+.carousel-item::after {
+	position: absolute;
+	content: "";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: radial-gradient(farthest-side, #0927537c, #092753d7);
+}
+
+.carousel-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: var(--white);
+	z-index: 4;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+}
+
+.carousel-content h3 {
+	font-weight: 900;
+	font-size: 50px;
+}
+
+.carousel-content h5 {
+	letter-spacing: 1px;
+	color: var(--sec-color);
+}
+
+/* End Hero Section */
