--- a/css/main.css
+++ b/css/main.css
@@ -74,8 +74,8 @@ a {
 	background-color: var(--bg-color);
 	height: 30px;
 	padding: 0px 40px;
-	font-size: 14px;
-	font-weight: 500;
+	font-size: 16px;
+	font-weight: 600;
 }
 
 .pre-header ul li a {
@@ -986,25 +986,21 @@ a {
 	font-size: 14px;
 	font-weight: 700;
 	margin-top: 10px;
-	text-transform: capitalize;
 	padding: 16px 39px;
-	border: 2px solid var(--sec-color);
-	background: var(--sec-color);
-	display: inline-block;
 	position: relative;
 	line-height: 24px;
 	cursor: pointer;
-	color: #fff;
-	background-color: var(--white);
+	color: var(--white);
+	background-color: var(--first-color);
 	border: 4px solid var(--first-color);
-	transition: 500ms;
-	color: var(--first-color);
 	border-radius: 10px;
 }
 
 .contact-form .theme-btn:hover {
-	color: var(--white);
-	background-color: var(--first-color);
+	background-color: var(--white);
+	border: 4px solid var(--first-color);
+	transition: 500ms;
+	color: var(--first-color);
 }
 
 .contact-form input.error,
